[MODORDERS-1408]. Deleting a holding results in another referenced holding being silently deleted (#1250)
* [MODORDERS-1408]. Deleting a holding results in another referenced holding being silently deleted

* [MODORDERS-1408]. Fix mocked bean

* [MODORDERS-1408]. Simplify the solution

* [MODORDERS-1408]. Fix sonar

* [MODORDERS-1408]. Rename args and vars

* [MODORDERS-1408]. Improve logs